# b-link

./: .gitignore  CMakeLists.txt
source/: b-link.hpp  main.cpp
